# ccodetools

./: .env  .gitignore  README.md  pyproject.toml  todo
.claude/: settings.local.json
src/ccodetools/: __init__.py  __main__.py  cli.py  factory.py  interface.py  server.py
src/ccodetools/impl/: __init__.py  base.py  cached_analyzer.py  clang_analyzer.py  tree_sitter.py
tests/: __init__.py  test_tree_sitter_analyzer.py
tests/fixtures/: bitvec.c  pcache.c  pcache.h  sample.c  sqliteInt.h
