[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "c-code-analyzer-mcp"
version = "0.1.0"
description = "MCP server for efficient C code analysis using tree-sitter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "tree-sitter",
    "tree-sitter-c",
    "click",
]

[project.optional-dependencies]
clang = [
    "clang==18.*",
    "python-dotenv",
]

dev = [
    "pytest",
]

[project.scripts]
c-code-analyzer = "ccodetools.server:main"
cli = "ccodetools.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ccodetools", "ccodetools.impl"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true